Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-1983] fixed port validation in host agent port, ipmi port and in discovery checks ports (now supports for ports ranges like "21-80,465") (AM)
 - [ZBX-1357] updated French translation; thanks to alixen (Richlv)
 - [ZBX-2048] fixed sorting in screens dropdown (Vedmak)
 - [ZBX-2221] fixed expanding/collapsing categories in "Latest Data" (Aly)
 - [ZBX-2225] fixed linkage if templated items are used in graphs as Y axis min and max values (Sasha)
 - [ZBX-2225] complete rewrite of the server code for template linkage (Sasha)
 - [ZBX-2210] added template replace option for hosts mass update (Vedmak)
 - [ZBX-2219] fixed graphs data in data.sql (Aly)
 - [ZBX-1345] time filter redesigned, sliders moved to top inside filter (Vedmak)
 - [ZBX-2151] fixed header sorting in overview for items and triggers (AM)
 - [DEV-456] added filter to dashboard (Aly)
 - [ZBX-2191] remove broken trigger from the default dataset (Richlv)
 - [ZBX-2172] fixed object available scripts sorting alphabetically (AM)
 - [ZBX-2217] fixed JS error in status of triggers page in IE (Aly)
 - [ZBX-2199] fixed time output format when time is less then 1 ms (AM)
 - [ZBX-1956] fixed deletion of last row or col in screen (AM)
 - [ZBX-1956] added cursor pointer on minus (remove) icons in screens (AM)
 - [ZBX-1347] added support of hostnames and keys with spaces in sender input file (Sasha)
 - [ZBX-2189] fixed compilation under AIX 5.3 (Sasha)
 - [ZBX-1229] added comparison between IPv4, IPv4-mapped and IPv4-compatible allowed server addresses (Dmitry)
 - [ZBX-1949] fixed "housekeeping" procedure for the table "housekeeper" itself, added configuration parameter "MaxHousekeeperDelete" for the server (Dmitry)
 - [ZBX-2173] fixed too long URL for webgraph when many websteps are defined (Vedmak)